--- a/V12/twikey_integration/views/mandate_details.xml
+++ b/V12/twikey_integration/views/mandate_details.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="%(twikey_integration.mandate_cancel_reason_action)d" string="Cancel" type="action" class="oe_highlight"/>
+                    <button name="cancel_or_delete_mandate" string="Cancel" type="action" class="oe_highlight"/>
                     <button name="update_mandate_details" string="Update Mandate Details on Twikey" type="object" class="oe_highlight"/>
                     <field name="state" widget="statusbar" nolabel="1"/>
                 </header>
