--- a/V12/twikey_integration/views/res_partner_view.xml
+++ b/V12/twikey_integration/views/res_partner_view.xml
@@ -13,6 +13,11 @@
                <xpath expr="//field[@name='vat']" position="after">
                     <field name="twikey_reference"/>
                </xpath>
+               <xpath expr="//notebook" position="inside">
+                    <page name="mandate" string="Mandates">
+                        <field name="mandate_ids"/>
+                    </page>
+               </xpath>
            </field>
        </record>
 </odoo>
