--- a/V14/twikey_integration/views/res_config_settings_views.xml
+++ b/V14/twikey_integration/views/res_config_settings_views.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-        <record id="res_config_settings_view_twikey_form_inherit" model="ir.ui.view">
-            <field name="name">res.config.settings.view.twikey.form.inherit.base.setup</field>
-            <field name="model">res.config.settings</field>
-            <field name="inherit_id" ref="base_setup.res_config_settings_view_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//div[@name='integration']" position="inside">
-                    <div class="col-12 col-lg-6 o_setting_box" id="module_twikey">
-                        <div class="o_setting_left_pane">
-                            <field name="module_twikey" />
+    <record id="res_config_settings_view_twikey_form_inherit" model="ir.ui.view">
+        <field name="name">res.config.settings.view.twikey.form.inherit.base.setup</field>
+        <field name="model">res.config.settings</field>
+        <field name="inherit_id" ref="base_setup.res_config_settings_view_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@name='integration']" position="inside">
+                <div class="col-12 col-lg-6 o_setting_box" id="module_twikey">
+                    <div class="o_setting_left_pane">
+                        <field name="module_twikey"/>
+                    </div>
+                    <div class="o_setting_right_pane">
+                        <label string="Twikey" for="module_twikey"/>
+                        <div class="text-muted">
+                            Enable Twikey Integration
                         </div>
-                        <div class="o_setting_right_pane">
-                            <label string="Twikey" for="module_twikey"/>
-                            <div class="text-muted">
-                               Enable Twikey Integration
+                        <div attrs="{'invisible': [('module_twikey', '=', False)]}">
+                            <div class="content-group mt16">
+                                <label for="test" class="o_light_label"/>
+                                <field name="test"/>
                             </div>
-                            <div attrs="{'invisible': [('module_twikey', '=', False)]}">
-                                <div class="content-group mt16">
-                                    <label for="api_key" class="o_light_label"/>
-                                    <field name="api_key"/>
-                                </div>
-                                <div class="content-group mt16">
-                                    <label for="authorization_token" class="o_light_label"/>
-                                    <field name="authorization_token"/>
-                                </div>
+                            <div class="content-group mt16">
+                                <label for="api_key" class="o_light_label"/>
+                                <field name="api_key"/>
                             </div>
                         </div>
                     </div>
-                </xpath>
-            </field>
-        </record>
+                </div>
+            </xpath>
+        </field>
+    </record>
 
 </odoo>
