--- a/V14/twikey_integration/views/res_partner_view.xml
+++ b/V14/twikey_integration/views/res_partner_view.xml
@@ -7,11 +7,16 @@
            <field name="arch" type="xml">
                <xpath expr="//form//sheet" position="before">
                    <header>
-                       <button name="action_invite_customer" string="Document Signature via Twikey" type="object" class="oe_highlight"/>
+                       <button name="action_invite_customer" string="New Twikey" type="object" class="oe_highlight"/>
                    </header>
                </xpath>
                <xpath expr="//field[@name='vat']" position="after">
                     <field name="twikey_reference"/>
+               </xpath>
+               <xpath expr="//notebook" position="inside">
+                    <page name="mandate" string="Mandates">
+                        <field name="mandate_ids"/>
+                    </page>
                </xpath>
            </field>
        </record>
