--- a/V12/twikey_integration/views/mandate_details.xml
+++ b/V12/twikey_integration/views/mandate_details.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="%(twikey_integration.mandate_cancel_reason_action)d" string="Cancel" type="action" class="oe_highlight"/>
+                    <button name="%(twikey_integration.mandate_cancel_reason_action)d" string="Cancel" type="action" class="oe_highlight" attrs="{'invisible': [('state', '!=', 'signed')]}"/>
                     <button name="sync_mandate" string="Sync" type="object" class="oe_highlight"/>
                     <field name="state" widget="statusbar" nolabel="1"/>
                 </header>
