add new page in res partner

--- a/V12/twikey_integration/views/res_partner_view.xml
+++ b/V12/twikey_integration/views/res_partner_view.xml
@@ -18,6 +18,11 @@
                         <field name="mandate_ids"/>
                     </page>
                </xpath>
+               <xpath expr="//notebook" position="inside">
+                   <page name="invoice" string="Invoice">
+                       <field name="twikey_inv_ids"/>
+                   </page>
+               </xpath>
            </field>
        </record>
 </odoo>
