--- a/V12/twikey_integration/views/account_invoice.xml
+++ b/V12/twikey_integration/views/account_invoice.xml
@@ -10,7 +10,7 @@
                     <field name="twikey_invoice_id"/>
                </xpath>
                <xpath expr="//button[@name='preview_invoice']" position="after">
-                    <button name="sync_invoice" string="Sync" type="object" class="oe_highlight"/>
+                    <button name="sync_invoice" string="Sync" type="object" class="oe_highlight" attrs="{'invisible':[('state','=','paid')]}"/>
                </xpath>
            </field>
        </record>
