Chnages in Invoice and Contract Template

--- a/V12/twikey_integration/views/account_invoice.xml
+++ b/V12/twikey_integration/views/account_invoice.xml
@@ -6,11 +6,13 @@
            <field name="inherit_id" ref="account.invoice_form"/>
            <field name="arch" type="xml">
                <xpath expr="//field[@name='payment_term_id']" position="after">
-                    <field name="twikey_url" widget="url"/>
-                    <field name="twikey_invoice_id"/>
+                    <field name="is_twikey" invisible="1"/>
+                    <field name="twikey_url" widget="url" attrs="{'invisible': [('is_twikey', '=', False)]}"/>
+                    <field name="twikey_invoice_id" attrs="{'invisible': [('is_twikey', '=', False)]}"/>
+                    <field name="template_id" attrs="{'invisible': [('is_twikey', '=', False)]}" readonly="1"/>
                </xpath>
                <xpath expr="//button[@name='preview_invoice']" position="after">
-                    <button name="sync_invoice" string="Sync" type="object" class="oe_highlight" attrs="{'invisible':[('state','=','paid')]}"/>
+                    <button name="sync_invoice" string="Sync" type="object" class="oe_highlight" attrs="{'invisible':['|',('state','=','paid'),('is_twikey', '=', False)]}"/>
                </xpath>
            </field>
        </record>
