--- a/V12/twikey_integration/views/mandate_details.xml
+++ b/V12/twikey_integration/views/mandate_details.xml
@@ -19,7 +19,7 @@
                     <group>
                         <group>
                             <field name="reference" readonly="1"/>
-                            <field name="contract" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
+                            <field name="contract_temp_id" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
                             <field name="url" widget="url" attrs="{'invisible': [('state', '!=', 'pending')]}"/>
                         </group>
                         <group>
@@ -41,7 +41,7 @@
             <tree>
                 <field name="partner_id"/>
                 <field name="reference"/>
-                <field name="contract"/>
+                <field name="contract_temp_id"/>
                 <field name="lang"/>
             </tree>
         </field>
