menu seq change and generate api_token from res.config.settings

--- a/V12/twikey_integration/views/mandate_details.xml
+++ b/V12/twikey_integration/views/mandate_details.xml
@@ -55,5 +55,11 @@
     </record>
     
     <menuitem id="menu_action_mandate_details_view" action="mandate_details_action"
-                  parent="contacts.menu_contacts" sequence="1"/>
+                  parent="contacts.menu_contacts" sequence="2"/>
+
+    <menuitem id="contacts.res_partner_menu_config"
+        name="Configuration"
+        parent="contacts.menu_contacts"
+        groups="base.group_system"
+        sequence="3"/>
 </odoo>
