--- a/V13/twikey_integration/views/res_partner_view.xml
+++ b/V13/twikey_integration/views/res_partner_view.xml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-       <record id="res_partner_view_twikey_form_inherit" model="ir.ui.view">
-           <field name="name">res.partner.view.twikey.form.inherit</field>
-           <field name="model">res.partner</field>
-           <field name="inherit_id" ref="base.view_partner_form"/>
-           <field name="arch" type="xml">
-               <xpath expr="//form//sheet" position="before">
-                   <header>
-                       <button name="action_invite_customer" string="New Twikey" type="object" class="oe_highlight"/>
-                   </header>
-               </xpath>
-               <xpath expr="//field[@name='vat']" position="after">
-                    <field name="twikey_reference"/>
-               </xpath>
-               <xpath expr="//notebook" position="inside">
-                    <page name="mandate" string="Mandates">
-                        <field name="mandate_ids"/>
-                    </page>
-               </xpath>
-           </field>
-       </record>
+   <record id="res_partner_view_twikey_form_inherit" model="ir.ui.view">
+       <field name="name">res.partner.view.twikey.form.inherit</field>
+       <field name="model">res.partner</field>
+       <field name="inherit_id" ref="base.view_partner_form"/>
+       <field name="arch" type="xml">
+           <xpath expr="//form//sheet" position="before">
+               <header>
+                   <button name="action_invite_customer" string="New Twikey" type="object" class="oe_highlight"/>
+               </header>
+           </xpath>
+           <xpath expr="//field[@name='vat']" position="after">
+                <field name="twikey_reference"/>
+           </xpath>
+           <xpath expr="//notebook" position="inside">
+                <page name="mandate" string="Mandates">
+                    <field name="mandate_ids"/>
+                </page>
+           </xpath>
+       </field>
+   </record>
+    <record id="res_partner_account_view_twikey_form_inherit" model="ir.ui.view">
+        <field name="name">res.partner.account.view.twikey.form.inherit</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="account.view_partner_property_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//notebook/page[@name='accounting']" position="inside">
+                <group string="Twikey Invoices">
+                    <field nolabel="1" name="twikey_inv_ids" context="{'tree_view_ref':'account.invoice_tree', 'form_view_ref': 'account.invoice_form'}"/>
+                </group>
+            </xpath>
+            <xpath expr="//notebook/page[@name='accounting_disabled']" position="inside">
+                <group string="Twikey Invoices">
+                    <field nolabel="1" name="twikey_inv_ids" context="{'tree_view_ref':'account.invoice_tree', 'form_view_ref': 'account.invoice_form'}"/>
+                </group>
+            </xpath>
+        </field>
+    </record>
 </odoo>
