--- a/V14/twikey_integration/views/mandate_details.xml
+++ b/V14/twikey_integration/views/mandate_details.xml
@@ -6,8 +6,8 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="cancel_or_delete_mandate" string="Cancel" type="object" class="oe_highlight"/>
-                    <button name="sync_mandate" string="Sync" type="object" class="oe_highlight"/>
+                    <button name="%(twikey_integration.mandate_cancel_reason_action)d" string="Cancel" type="action" class="oe_highlight" attrs="{'invisible': [('state', '!=', 'signed')]}"/>
+                    <button name="update_feed" string="Sync" type="object" class="oe_highlight"/>
                     <field name="state" widget="statusbar" nolabel="1"/>
                 </header>
                 <sheet>
@@ -20,7 +20,7 @@
                         <group>
                             <field name="creditor_id" invisible="1"/>
                             <field name="reference" readonly="1"/>
-                            <field name="contract" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
+                            <field name="contract_temp_id" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
                             <field name="url" widget="url" attrs="{'invisible': [('state', '!=', 'pending')]}"/>
                         </group>
                         <group>
@@ -31,6 +31,11 @@
                     </group>
                     <field name="description" placeholder="Description" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
                 </sheet>
+                 <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="activity_ids" widget="mail_activity"/>
+                    <field name="message_ids" widget="mail_thread"/>
+                </div>
             </form>
         </field>
     </record>
@@ -43,7 +48,7 @@
                 <field name="partner_id"/>
                 <field name="creditor_id" invisible="1"/>
                 <field name="reference"/>
-                <field name="contract"/>
+                <field name="contract_temp_id"/>
                 <field name="lang"/>
             </tree>
         </field>
