[IMP] V12/twikey_integration, V13/twikey_integration: Improve code as per v13. where facing the error while sync invoice.

--- a/V13/twikey_integration/views/mandate_details.xml
+++ b/V13/twikey_integration/views/mandate_details.xml
@@ -20,7 +20,7 @@
                         <group>
                             <field name="creditor_id" invisible="1"/>
                             <field name="reference" readonly="1"/>
-                            <field name="contract" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
+                            <field name="contract_temp_id" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
                             <field name="url" widget="url" attrs="{'invisible': [('state', '!=', 'pending')]}"/>
                         </group>
                         <group>
