[IMP]nvoice structure changed

--- a/V14/twikey_integration/views/account_move.xml
+++ b/V14/twikey_integration/views/account_move.xml
@@ -6,10 +6,10 @@
            <field name="inherit_id" ref="account.view_move_form"/>
            <field name="arch" type="xml">
                <xpath expr="//field[@name='ref']" position="after">
-                    <field name="is_twikey" invisible="1"/>
+                    <field name="is_twikey" invisible="0"/>
                     <field name="twikey_url" widget="url" attrs="{'invisible': [('is_twikey', '=', False)]}"/>
                     <field name="twikey_invoice_id" attrs="{'invisible': [('is_twikey', '=', False)]}"/>
-                    <field name="template_id" attrs="{'invisible': [('is_twikey', '=', False)]}" readonly="1"/>
+                    <field name="template_id" attrs="{'invisible': [('is_twikey', '=', False)]}"/>
                </xpath>
                <xpath expr="//button[@name='preview_invoice']" position="after">
                     <button name="update_move_feed" string="Sync" type="object" class="oe_highlight" attrs="{'invisible':[('is_twikey', '=', False)]}"/>
