--- a/twikey_integration/views/account_move.xml
+++ b/twikey_integration/views/account_move.xml
@@ -1,19 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-       <record id="account_move_form_twikey" model="ir.ui.view">
-           <field name="name">account.move.view.twikey.form.inherit</field>
-           <field name="model">account.move</field>
-           <field name="inherit_id" ref="account.view_move_form"/>
-           <field name="arch" type="xml">
-               <xpath expr="//field[@name='ref']" position="after">
-                    <field name="is_twikey" invisible="0"/>
-                    <field name="twikey_url" widget="url" attrs="{'invisible': [('is_twikey', '=', False)]}"/>
-                    <field name="twikey_invoice_id" attrs="{'invisible': [('is_twikey', '=', False)]}"/>
-                    <field name="template_id" attrs="{'invisible': [('is_twikey', '=', False)]}"/>
-               </xpath>
-               <xpath expr="//button[@name='preview_invoice']" position="after">
-                    <button name="update_invoice_feed" string="Sync" type="object" class="oe_highlight" attrs="{'invisible':[('is_twikey', '=', False)]}"/>
-               </xpath>
-           </field>
-       </record>
+   <record id="view_move_form" model="ir.ui.view">
+       <field name="name">account.move.view.twikey.form.inherit</field>
+       <field name="model">account.move</field>
+       <field name="inherit_id" ref="account.view_move_form" />
+       <field name="arch" type="xml">
+           <xpath expr="//button[@name='preview_invoice']" position="after">
+                <button
+                    name="update_invoice_feed"
+                    string="Sync"
+                    type="object"
+                    class="oe_highlight"
+                />
+           </xpath>
+            <xpath expr="//page[@name='other_info']" position="after">
+                <page id="twikey_info" name="twikey_info" string="Twikey Info">
+                    <group>
+                        <field name="twikey_url" widget="url" />
+                        <field name="twikey_invoice_identifier" />
+                        <field name="twikey_template_id" />
+                        <field name="twikey_invoice_state" />
+                    </group>
+                </page>
+            </xpath>
+       </field>
+   </record>
 </odoo>
