--- a/twikey_integration/views/contract_template.xml
+++ b/twikey_integration/views/contract_template.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <record id="contract_template_view_twikey_form" model="ir.ui.view">
         <field name="name">contract.template.twikey.form.view</field>
@@ -8,35 +8,38 @@
                 <sheet>
                     <div class="oe_title">
                         <h1>
-                            <field name="name" placeholder="Contract Template"/>
+                            <field name="name" placeholder="Contract Template" />
                         </h1>
                     </div>
                     <group>
                         <group>
-                            <field name="template_id"/>
+                            <field name="template_id_twikey" />
                         </group>
                         <group>
-                            <field name="type"/>
+                            <field name="type" />
                         </group>
                     </group>
                     <notebook>
                         <page>
                             <field name="attribute_ids">
                                 <tree editable="bottom">
-                                    <field name="name"/>
-                                    <field name="type"/>
+                                    <field name="name" />
+                                    <field name="type" />
                                 </tree>
                                 <form>
                                     <sheet>
                                         <div class="oe_title">
                                             <h1>
-                                                <field name="name" placeholder="Contract Template Attributes"/>
+                                                <field
+                                                    name="name"
+                                                    placeholder="Contract Template Attributes"
+                                                />
                                             </h1>
                                         </div>
                                         <group>
                                             <group>
-                                                <field name="contract_template_id" invisible="1"/>
-                                                <field name="type"/>
+                                                <field name="contract_template_id" invisible="1" />
+                                                <field name="type" />
                                             </group>
                                         </group>
                                     </sheet>
@@ -48,25 +51,29 @@
             </form>
         </field>
     </record>
-    
+
     <record id="contract_template_view_twikey_tree" model="ir.ui.view">
         <field name="name">contract.template.view.twikey.tree</field>
         <field name="model">twikey.contract.template</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name"/>
-                <field name="template_id"/>
-                <field name="type"/>
+                <field name="name" />
+                <field name="template_id_twikey" />
+                <field name="type" />
             </tree>
         </field>
     </record>
-    
+
     <record id="contract_template_action" model="ir.actions.act_window">
         <field name="name">Contract Template</field>
         <field name="res_model">twikey.contract.template</field>
         <field name="view_mode">tree,form</field>
     </record>
-    
-    <menuitem id="menu_action_contract_template_view" action="contract_template_action"
-                  parent="contacts.res_partner_menu_config" sequence="1"/>
+
+    <menuitem
+        id="menu_action_contract_template_view"
+        action="contract_template_action"
+        parent="contacts.res_partner_menu_config"
+        sequence="1"
+    />
 </odoo>
