--- a/twikey_integration/views/res_config_settings_views.xml
+++ b/twikey_integration/views/res_config_settings_views.xml
@@ -1,34 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <record id="res_config_settings_view_twikey_form_inherit" model="ir.ui.view">
+    <record id="res_config_settings_view_form" model="ir.ui.view">
         <field name="name">res.config.settings.view.twikey.form.inherit.base.setup</field>
         <field name="model">res.config.settings</field>
-        <field name="inherit_id" ref="base_setup.res_config_settings_view_form"/>
+        <field name="inherit_id" ref="base_setup.res_config_settings_view_form" />
         <field name="arch" type="xml">
             <xpath expr="//div[@name='integration']" position="inside">
-                <div class="col-12 col-lg-6 o_setting_box" id="module_twikey">
-                    <div class="o_setting_left_pane">
-                        <field name="module_twikey"/>
-                    </div>
+                <div class="col-12 col-lg-6 o_setting_box">
                     <div class="o_setting_right_pane">
-                        <label string="Twikey" for="module_twikey"/>
+                        <label string="Twikey" for="twikey_api_key" />
                         <div class="text-muted">
                             Enable Twikey Integration
                         </div>
-                        <div attrs="{'invisible': [('module_twikey', '=', False)]}">
+                        <div>
                             <div class="content-group mt16">
-                                <label for="test" class="o_light_label"/>
-                                <field name="test"/>
+                                <label for="twikey_api_key" class="o_light_label" />
+                                <field name="twikey_api_key" />
                             </div>
                             <div class="content-group mt16">
-                                <label for="api_key" class="o_light_label"/>
-                                <field name="api_key"/>
+                                <label for="twikey_base_url" class="o_light_label" />
+                                <field name="twikey_base_url" />
                             </div>
                             <div>
-                                    <button name="test_connection" string="Test Connection" type="object" class="oe_link" icon="fa-arrow-right"/>
+                                    <button
+                                    name="test_twikey_connection"
+                                    string="Test Connection"
+                                    type="object"
+                                    class="oe_link"
+                                    icon="fa-arrow-right"
+                                />
                                 </div>
                                 <div>
-                                <button name="sync_contract_template" string="Sync Contract Template" type="object" class="oe_link" icon="fa-arrow-right"/>
+                                <button
+                                    name="twikey_sync_contract_template"
+                                    string="Sync Contract Template"
+                                    type="object"
+                                    class="oe_link"
+                                    icon="fa-arrow-right"
+                                />
                             </div>
                         </div>
                     </div>
