--- a/twikey_integration/wizard/success_message_wizard.xml
+++ b/twikey_integration/wizard/success_message_wizard.xml
@@ -1,17 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<odoo>
-    <data>
-        <record id="success_message_wizard" model="ir.ui.view">
-            <field name="name">success.message.wizard</field>
-            <field name="model">success.message.wizard</field>
-            <field name="arch" type="xml">
-                <form string="Message">
-                    <field name="name"/>
-                    <footer>
-                        <button string="OK" class="btn-primary" special="cancel" />
-                    </footer>
-                </form>
-            </field>
-        </record>
-    </data>
+<?xml version="1.0" encoding="utf-8" ?>
+<odoo noupdate="1">
+    <record id="success_message_wizard" model="ir.ui.view">
+        <field name="name">success.message.wizard</field>
+        <field name="model">success.message.wizard</field>
+        <field name="arch" type="xml">
+            <form string="Message">
+                <field name="name" />
+                <footer>
+                    <button string="OK" class="btn-primary" special="cancel" />
+                </footer>
+            </form>
+        </field>
+    </record>
 </odoo>
