--- a/twikey_integration/views/contract_template.xml
+++ b/twikey_integration/views/contract_template.xml
@@ -14,6 +14,7 @@
                     <group>
                         <group>
                             <field name="template_id_twikey" />
+                            <field name="display_name" />
                         </group>
                         <group>
                             <field name="type" />
@@ -21,7 +22,7 @@
                     </group>
                     <notebook>
                         <page>
-                            <field name="attribute_ids">
+                            <field name="twikey_attribute_ids">
                                 <tree editable="bottom">
                                     <field name="name" />
                                     <field name="type" />
@@ -58,6 +59,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="name" />
+                <field name="display_name" />
                 <field name="template_id_twikey" />
                 <field name="type" />
             </tree>
