--- a/twikey_integration/views/account_move.xml
+++ b/twikey_integration/views/account_move.xml
@@ -1,28 +1,56 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-   <record id="view_move_form" model="ir.ui.view">
-       <field name="name">account.move.view.twikey.form.inherit</field>
-       <field name="model">account.move</field>
-       <field name="inherit_id" ref="account.view_move_form" />
-       <field name="arch" type="xml">
-           <xpath expr="//button[@name='preview_invoice']" position="after">
+    <record id="view_move_form" model="ir.ui.view">
+        <field name="name">account.move.view.twikey.form.inherit</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form" />
+        <field name="arch" type="xml">
+            <xpath expr="//button[@name='preview_invoice']" position="after">
                 <button
                     name="update_invoice_feed"
                     string="Sync"
                     type="object"
                     class="oe_highlight"
+                    attrs="{'invisible': [('has_to_be_sent_to_twikey', '=', False)]}"
                 />
-           </xpath>
+            </xpath>
             <xpath expr="//page[@name='other_info']" position="after">
-                <page id="twikey_info" name="twikey_info" string="Twikey Info">
+                <field name="has_to_be_sent_to_twikey" invisible="1" />
+                <page
+                    id="twikey_info"
+                    name="twikey_info"
+                    string="Twikey Info"
+                    attrs="{'invisible': [('has_to_be_sent_to_twikey', '=', False)]}"
+                >
                     <group>
-                        <field name="twikey_url" widget="url" />
-                        <field name="twikey_invoice_identifier" />
-                        <field name="twikey_template_id" />
-                        <field name="twikey_invoice_state" />
+                        <field
+                            name="do_not_send_to_twikey"
+                            attrs="{'readonly': [('state', '!=', 'draft')]}"
+                        />
+                        <field
+                            name="no_auto_collect_invoice"
+                            attrs="{'readonly': [('state', '!=', 'draft')], 'invisible': [('do_not_send_to_twikey', '=', True)]}"
+                        />
+                        <field
+                            name="twikey_url"
+                            widget="url"
+                            attrs="{'invisible': [('do_not_send_to_twikey', '=', True)]}"
+                        />
+                        <field
+                            name="twikey_invoice_identifier"
+                            attrs="{'invisible': [('do_not_send_to_twikey', '=', True)]}"
+                        />
+                        <field
+                            name="twikey_template_id"
+                            attrs="{'invisible': [('do_not_send_to_twikey', '=', True)]}"
+                        />
+                        <field
+                            name="twikey_invoice_state"
+                            attrs="{'invisible': [('do_not_send_to_twikey', '=', True)]}"
+                        />
                     </group>
                 </page>
             </xpath>
-       </field>
-   </record>
+        </field>
+    </record>
 </odoo>
