--- a/twikey_integration/views/mandate_details.xml
+++ b/twikey_integration/views/mandate_details.xml
@@ -45,6 +45,14 @@
                             <field name="lang" attrs="{'readonly': [('state', '!=', 'pending')]}" />
                         </group>
                     </group>
+                    <group>
+                        <group>
+                            <field name="address" readonly="1" />
+                            <field name="city" readonly="1" />
+                            <field name="zip" readonly="1" />
+                            <field name="country_id" readonly="1" />
+                        </group>
+                    </group>
                     <field
                         name="description"
                         placeholder="Description"
