--- a/twikey_integration/views/mandate_details.xml
+++ b/twikey_integration/views/mandate_details.xml
@@ -24,6 +24,7 @@
                     </div>
                     <group>
                         <group>
+                            <field name="reference" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
                             <field name="contract_temp_id" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
                             <field name="url" widget="url" attrs="{'invisible': ['|',('state', '!=', 'pending'),('url','=',False)]}"/>
                         </group>
